kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: laravel-swoole-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: laravel-swoole-ip
  labels:
    app: laravel-swoole
spec:
  backend:
    serviceName: laravel-swoole-backend
    servicePort: 1215
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-swoole-backend
  labels:
    app: laravel-swoole
spec:
  type: NodePort
  selector:
    app: laravel-swoole
    tier: web
  ports:
  - port: 1215
    targetPort: 1215
